Correcion de errores segun la PEP.

--- a/consultas/Consulta 7, 8 y 9.ipynb
+++ b/consultas/Consulta 7, 8 y 9.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
     "\n",
     "En un **If** que controla que la celda tenga información:\n",
     "\n",
-    "-En la variable *porcentage* se guarda el porcentaje de gente en población de calle.\n",
+    "-En la variable *porcentage* se guarda el porcentaje de gente en población de calle. Para acceder a la población en situación de calle y a la población total se utiliza *int()* para hacer la conversión de String a entero.\n",
     "\n",
     "-Se crea una tupla *content*, dicha tupla tiene el nombre de la jurisdicción y el porcentaje (con *round* se redondea el valor).\n",
     "\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,22 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jurisdicciones con mayor porcentaje de población en situación de calle: \n",
-      "   1. Ciudad Autónoma de Buenos Aires . Porcentaje:  0.00077 %.\n",
-      "   2. Santa Cruz . Porcentaje:  0.000258 %.\n",
-      "   3. Salta . Porcentaje:  0.000176 %.\n",
-      "   4. Entre Ríos . Porcentaje:  0.000116 %.\n",
-      "   5. Santa Fe . Porcentaje:  0.000113 %.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print ('Jurisdicciones con mayor porcentaje de población en situación de calle: ')\n",
     "ind = 1\n",
@@ -192,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,17 +313,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jurisdiccion con mayor brecha entre sexos al nacer es Buenos Aires . Brecha: 582858 .\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'Jurisdiccion con mayor brecha entre sexos al nacer es', maximum[0], '. Brecha:', maximum[1], '.')\n",
     "file.close()"
@@ -365,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,26 +429,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tipos de conectividad: \n",
-      "  - ADSL\n",
-      "  - CABLEMODEM\n",
-      "  - DIALUP\n",
-      "  - FIBRAOPTICA\n",
-      "  - SATELITAL\n",
-      "  - WIRELESS\n",
-      "  - TELEFONIAFIJA\n",
-      "  - 3G\n",
-      "  - 4G\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print ('Tipos de conectividad: ')\n",
     "for elem in header:\n",
