Fin Procesamiento 1. Correcion de errores.

--- a/procesamiento/procesamiento datasets.ipynb
+++ b/procesamiento/procesamiento datasets.ipynb
@@ -16,31 +16,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "from pathlib import Path\n",
+    "from unidecode import unidecode\n",
+    "from funciones import renombrar_prov\n",
     "\n",
     "path_read= Path ('../datasets/ar-airports.csv')\n",
-    "path_write= Path ('../datasets_custom/ar-airports-custom.csv')\n"
+    "path_write= Path ('../datasets_custom/ar-airports-custom.csv')\n",
+    "path_read2= Path ('../datasets/ar.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se hace el import de la libreria csv y de la funcion Path de la liberaria pathlib. Se declara en dos variables diferentes los paths a los archivos.\n"
+    "Se hace el import de la libreria csv, de la libreria unidecode y de la funcion Path de la liberaria pathlib. Se declara en variables diferentes los paths a los archivos que utilizaremos.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "lectura = open (path_read, mode='r',encoding= 'UTF-8') \n",
+    "lectura2 = open (path_read2, mode='r', encoding= 'UTF-8')\n",
     "escritura= open(path_write ,mode='w',encoding= 'UTF-8' ,newline= '') \n"
    ]
   },
@@ -48,16 +52,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se abre el archivo de lectura en modo lectura ('r') y el archivo de escritura en modo escritura ('w'). También se especifica la codificación (UTF-8) y se establece newline=' ' para manejar los saltos de línea."
+    "Se abre los archivos de lectura en modo lectura ('r') y el archivo de escritura en modo escritura ('w'). También se especifica la codificación (UTF-8) y se establece newline=' ' para manejar los saltos de línea."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "lectorcsv= csv.reader(lectura)\n",
+    "lectorcsv2=csv.DictReader (lectura2)\n",
     "escritorcsv= csv.writer (escritura)"
    ]
   },
@@ -65,27 +70,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se crea un lector CSV (lectorcsv) para leer el archivo de entrada y un escritor CSV (escritorcsv) para escribir en el archivo de salida."
+    "Se crea un lector CSV (lectorcsv) para leer el archivo de entrada de los aeropuertos, un lector CSV de tipo dict (lectorcsv2) para leer el archivo de entrada de las provincias y ciudades de manera mas facil y un escritor CSV (escritorcsv) para escribir en el archivo de salida."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "260"
+       "270"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "encabezado = next(lectorcsv)\n",
+    "encabezado.append ('prov_name')\n",
     "encabezado.append ('elevation_name')\n",
     "escritorcsv.writerow (encabezado)"
    ]
@@ -94,16 +100,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se lee la primera fila del archivo de entrada para obtener el encabezado. Luego, se agrega la cadena 'elevation_name' al encabezado. El encabezado actualizado se escribe en el archivo de salida."
+    "Se lee la primera fila del archivo de entrada para obtener el encabezado. Luego, se agregan las cadenas 'elevation_name' y 'prov_name' al encabezado. El encabezado actualizado se escribe en el archivo de salida."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "ciudad_prov= {}\n",
+    "for line in lectorcsv2:\n",
+    "    ciudad_prov [unidecode(line['city'])] = line ['admin_name']\n",
+    "\n",
+    "ciudad_prov ['Buenos Aires'] = 'Ciudad Autónoma de Buenos Aires'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recorro el dataset ar.csv y guardo en un diccionario el nombre de las ciudades y su respectiva provincia."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "for fila in lectorcsv:\n",
+    "    city = unidecode(fila[13])\n",
+    "    aux= renombrar_prov.renombar_prov (fila[10])\n",
+    "    prov = ciudad_prov.get(city, aux)  \n",
+    "    if prov== 'Tierra del Fuego':\n",
+    "        prov= 'Tierra del Fuego, Antártida e Islas del Atlántico Sur' # No encontramos forma mas eficiente de hacer este cambio para que las consultas de los datasets funcionen correctamente.\n",
+    "    fila.append(prov)\n",
+    "\n",
     "    try: \n",
     "        elevacion = float(fila[6])\n",
     "        if elevacion <= 131:\n",
@@ -125,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para cada fila restante en el archivo de entrada se intenta convertir el valor en la sexta columna (la cual es la elevacion del aeropuerto) a un número flotante. Si la conversión es exitosa, se procede a determinar la categoría de elevación ('bajo', 'medio' o 'alto') y se agrega al archivo csv en la columna creada previamente. Si la conversión falla (porque la linea esta vacia o no es un numero), se captura la excepción ValueError y se agrega la cadena 'Sin altura' a la fila.\n"
+    "Para cada fila restante en el archivo de entrada se agrega el nombre de la provincia a la linea utilizando el diccionario previamente creado (se utiliza unidecode para evitar errores por tildes), dado que en el dataser ar.csv no estan todas las ciudades de las provincias, si sucede que la ciudad del aeropuerto no esta en el diccionario, utilizo la provincia del mismo dataset de los aeropuertos en la columna 10 (invocando la funcion renombrar_prov que elimina la palabra 'provice'). Posteriormente se intenta convertir el valor en la sexta columna (la cual es la elevacion del aeropuerto) a un número flotante. Si la conversión es exitosa, se procede a determinar la categoría de elevación ('bajo', 'medio' o 'alto') y se agrega al archivo csv en la columna creada previamente. Si la conversión falla (porque la linea esta vacia o no es un numero), se captura la excepción ValueError y se agrega la cadena 'Sin altura' a la fila.\n"
    ]
   },
   {
@@ -151,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
