--- a/consultas/Consulta 7, 8 y 9.ipynb
+++ b/consultas/Consulta 7, 8 y 9.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Primero se importan los módulos y la función con la que se va a trabajar. También se definen las constantes que indican los índices:"
+    "Primero se importan los módulos con los que se va a trabajar:"
    ]
   },
   {
@@ -21,11 +21,7 @@
    "outputs": [],
    "source": [
     "import csv\n",
-    "import pathlib\n",
-    "\n",
-    "JURISDICCION = 0\n",
-    "POBLACION_TOTAL = 1\n",
-    "POBLACION_CALLE = 4"
+    "import pathlib"
    ]
   },
   {
@@ -59,16 +55,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = pathlib.Path('../datasets/c2022_tp_c_resumen_adaptado.csv')\n",
+    "path = pathlib.Path('../datasets_custom/Censo_Modificado.csv')\n",
     "file = open(path, mode='r', encoding='UTF-8')\n",
-    "reader = csv.reader(file)"
+    "reader = csv.DictReader(file)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Iterando dos veces sobre **reader** se descarta la fila con la información de las columnas y la fila *Total del Pais*:\n",
+    "Iterando sobre **reader** se descarta la fila *Total del Pais*:\n",
     "\n",
     "*Se agrega ; al final de la instrucción para que no imprima*"
    ]
@@ -79,7 +75,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "next(reader);\n",
     "next(reader);"
    ]
   },
@@ -89,11 +84,7 @@
    "source": [
     "Con un **For** sobre el iterable se realiza el procesamiento del archivo linea por linea.\n",
     "\n",
-    "En un **If** que controla que la celda tenga información:\n",
-    "\n",
-    "-En la variable *porcentage* se guarda el porcentaje de gente en población de calle. Para acceder a la población en situación de calle y a la población total se utiliza *int()* para hacer la conversión de String a entero.\n",
-    "\n",
-    "-Se crea una tupla *content*, dicha tupla tiene el nombre de la jurisdicción y el porcentaje (con *round* se redondea el valor).\n",
+    "-Se crea una tupla *content*, dicha tupla tiene el nombre de la jurisdicción y el porcentaje (accediendo a dicha columna).\n",
     "\n",
     "-Se agrega la tupla a la lista que contiene la info de las jurisdicciones."
    ]
@@ -105,10 +96,8 @@
    "outputs": [],
    "source": [
     "for line in reader:\n",
-    "    if (line[POBLACION_CALLE] != '///'):\n",
-    "        porcentage = int(line[POBLACION_CALLE]) / int(line[POBLACION_TOTAL])\n",
-    "        content = (line[JURISDICCION], round(porcentage, 6))\n",
-    "        info_population.append(content)"
+    "    content = (line['Jurisdicción'], line['Porcentaje de población en situación de calle'])\n",
+    "    info_population.append(content)"
    ]
   },
   {
@@ -174,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Primero se importan los módulos y la función con la que se va a trabajar. También se definen las constantes que indican los índices:"
+    "Primero se importan los módulos con los que se va a trabajar:"
    ]
   },
   {
@@ -184,11 +173,7 @@
    "outputs": [],
    "source": [
     "import csv\n",
-    "import pathlib\n",
-    "\n",
-    "JURISDICCION = 0\n",
-    "VARONES = 5\n",
-    "MUJERES = 9"
+    "import pathlib"
    ]
   },
   {
@@ -222,16 +207,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = pathlib.Path('../datasets/c2022_tp_c_resumen_adaptado.csv')\n",
+    "path = pathlib.Path('../datasets_custom/Censo_Modificado.csv')\n",
     "file = open(path, mode='r', encoding='UTF-8')\n",
-    "reader = csv.reader(file)"
+    "reader = csv.DictReader(file)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Iterando dos veces sobre **reader** se descarta la fila con la información de las columnas y la fila *Total del Pais*:\n",
+    "Iterando sobre **reader** se descarta la fila *Total del Pais*:\n",
     "\n",
     "*Se agrega ; al final de la instrucción para que no imprima*"
    ]
@@ -242,7 +227,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "next(reader);\n",
     "next(reader);"
    ]
   },
@@ -268,15 +252,15 @@
    "outputs": [],
    "source": [
     "for line in reader:\n",
-    "    women = int(line[MUJERES])\n",
-    "    men = int(line[VARONES])\n",
+    "    women = int(line['Mujeres Total de población'])\n",
+    "    men = int(line['Varones Total de población'])\n",
     "\n",
     "    if (women > men):\n",
     "        difference = women-men\n",
     "    else:\n",
     "        difference = men-women\n",
     "\n",
-    "    content = (line[JURISDICCION], difference)\n",
+    "    content = (line['Jurisdicción'], difference)\n",
     "    info_population.append(content)"
    ]
   },
@@ -365,7 +349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = pathlib.Path('../datasets/Conectividad_Internet.csv')\n",
+    "path = pathlib.Path('../datasets_Custom/Conectividad_Internet.csv')\n",
     "file = open(path, mode='r', encoding='UTF-8')"
    ]
   },
@@ -417,7 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "no_connectivity = ('Provincia', 'Partido', 'Localidad', 'Poblacion', 'link', 'Latitud', 'Longitud')"
+    "no_connectivity = ('Provincia', 'Partido', 'Localidad', 'Poblacion', 'link', 'Latitud', 'Longitud', 'posee_conectividad')"
    ]
   },
   {
