--- a/procesamiento/procesamiento datasets.ipynb
+++ b/procesamiento/procesamiento datasets.ipynb
@@ -401,6 +401,35 @@
    "source": [
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Procesamiento dataset n4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importo el módulo \"censo2022\" desde la carpeta \"funciones\" e invoco a la función \"create_modified_file\" para generar un nuevo archivo .csv en el directorio \"datasets_custom\" a partir de los datos existentes en el archivo \"c2022_tp_c_resumen_adaptado.csv\" con un nombre ingresado por teclado.\n",
+    "Si ya existe un archivo con el nombre ingresado, lo sobreescribe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from funciones import censo2022 as cd\n",
+    "from pathlib import Path\n",
+    "name = input('Ingrese nombre de arhivo para crear o sobreescribir') + '.csv'\n",
+    "file_route = Path('datasets')/ 'c2022_tp_c_resumen_adaptado.csv'\n",
+    "new_file_route = Path('datasets_custom')/name\n",
+    "cd.create_modified_file(file_route,new_file_route)"
+   ]
   }
  ],
  "metadata": {
