--- a/consultas/incisos 4,5 y 6.ipynb
+++ b/consultas/incisos 4,5 y 6.ipynb
@@ -23,7 +23,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "provinces = demografia.mostrarSegunPoblacion()\n",
+    "censo = Path('..','datasets') / \"c2022_tp_c_resumen_adaptado.csv\"\n",
+    "aeropuertos = Path('..','datasets_custom') / \"ar-airports.csv\"\n",
+    "lagos = Path('..','datasets') / \"lagos_arg.csv\"\n",
+    "conectividad = Path('..','datasets_custom') / \"Conectividad_Internet.csv\"\n",
+    "\n",
+    "provinces = demografia.mostrarSegunPoblacion(censo,aeropuertos,lagos,conectividad)\n",
     "print(provinces)"
    ]
   },
